MacOS users can now finally build all binaries :D Thanks to the people behind the improvement of libdmg-hfsplus

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 CMakeFiles
 Makefile
 CMakeCache.txt
+dmg/dmg
+hdutil/hdutil
+hfs/hfsplus
+ipsw-patch/imagetool
+ipsw-patch/ipsw
+ipsw-patch/ticket
+ipsw-patch/validate
+ipsw-patch/xpwntool
