--- a/ipsw-patch/CMakeLists.txt
+++ b/ipsw-patch/CMakeLists.txt
@@ -54,6 +54,8 @@ ENDIF(HAVE_HW_CRYPTO)
 
 add_library(xpwn 8900.c bspatch.c ibootim.c img2.c img3.c libxpwn.c lzss.c lzssfile.c nor_files.c outputstate.c plist.c pwnutil.c)
 
+set_property(TARGET xpwn PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 IF(HAVE_HW_CRYPTO)
 	target_link_libraries(xpwn IOKit)
 ENDIF(HAVE_HW_CRYPTO)
