--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 
 project (XPwn)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 # We want win32 executables to build staticly by default, since it's more difficult to keep the shared libraries straight on Windows
 IF(WIN32)
 	SET(BUILD_STATIC ON CACHE BOOL "Force compilation with static libraries")
